# torch-sepconv

./: CMakeLists.txt  README.md  SeparableConvolution.lua  init.cu  init.lua  install.bash  run.lua
rocks/: nnex-scm-1.rockspec
src/: SeparableConvolution_cuda.c
